<resources>
    <string name="app_name">levelRunProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 미션 -->
    <string name="quest_experience_button">경험치 수령 버튼</string>
    <string name="exp_100">100exp</string>
    <string name="exp_300">300exp</string>
    <string name="exp_500">500exp</string>
    <string name="exp_1000">1000exp</string>
    <string name="exp_2000">2000exp</string>
    <string name="today_mission">오늘의 임무</string>
    <string name="daily_quest_1000_steps">[일일] 1,000보 걷기</string>
    <string name="daily_quest_3000_steps">[일일] 3,000보 걷기</string>
    <string name="daily_quest_5000_steps">[일일] 5,000보 걷기</string>
    <string name="daily_quest_10000_steps">[일일] 10,000보 걷기</string>
    <string name="weekly_quest_10000_steps">[주간] 10,000보 걷기</string>
    <string name="quest_image_description">퀘스트 이미지</string>
    <string name="back_button_description">뒤로 가기 버튼</string>
    <string name="exp_format">%d EXP</string>

    <string name="txt_register">회원가입</string>
    <string name="txt_line_register"><u>회원가입</u></string>
    <string name="txt_login">로그인</string>
    <string name="txt_nickname">닉네임</string>
    <string name="txt_ranker">랭커</string>
    <string name="txt_posting">포스팅</string>
    <string name="txt_latest">최신순</string>
    <string name="txt_popularity">인기순</string>
    <string name="txt_title">제목을 입력하세요</string>
    <string name="txt_tag"># 태그를 입력하세요(최대 5개)</string>
    <string name="txt_content">내용을 입력하세요</string>
    <string name="txt_id">아이디</string>
    <string name="txt_password">비밀번호</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_login">로그인</string>
    <string name="btnStrat">시작하기</string>
    <string name="btn_posting">포스팅 등록</string>
    <string name="txt_line_logout"><u>로그아웃</u></string>


    <string name="alert_title">선택하세요</string>
    <string-array name="alert_profile">
        <item>카메라 실행</item>
        <item>앨범에서 선택</item>
        <item>프로필 사진 삭제</item>
    </string-array>

    <string name="alertTitle">선택하세요</string>
    <string-array name="alert_posting">
        <item>카메라 실행</item>
        <item>앨범에서 선택</item>
    </string-array>

    <string name="today_button_label">오늘</string>
    <string name="today_record">오늘의 기록</string>
</resources>