<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_register"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/txt_nickname"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="#DDDDDD"
            android:backgroundTintMode="multiply"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="Name"
            android:inputType="text"
            android:padding="13dp"
            android:singleLine="false"
            android:textColor="#888888"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/txt_id"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="#DDDDDD"
            android:backgroundTintMode="multiply"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="13dp"
            android:singleLine="false"
            android:textColor="#888888"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/txt_password"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="#DDDDDD"
            android:backgroundTintMode="multiply"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="13dp"
            android:singleLine="false"
            android:textColor="#888888"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#FFC107"
            android:padding="5dp"
            android:text="@string/btn_register"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgKakaoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/kakao_sink_medium_narrow" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>