<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#329DBF"
    android:orientation="vertical"
    tools:context=".PostingAddActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_centerInParent="true"
            android:layout_gravity="center|center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:text="포스팅 작성"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp">

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/boxbottom" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgAddPhoto"
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/baseline_add_box_24" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="태그"
                android:textColor="#329DBF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/textbox"
                android:ems="10"
                android:hint="@string/txt_tag"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:paddingRight="5dp"
                android:paddingBottom="15dp"
                android:textColor="#4A4646"
                android:textColorHint="#000000"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="포스팅 내용"
                android:textColor="#329DBF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/textbox"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/txt_content"
                android:lines="7"
                android:padding="5dp"
                android:selectAllOnFocus="false"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="18sp" />

            <android.widget.Button
                android:id="@+id/btnAddPosting"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#329DBF"
                android:fontFamily="@font/poppins_regular"
                android:paddingLeft="20dp"
                android:paddingTop="7dp"
                android:paddingRight="20dp"
                android:paddingBottom="7dp"
                android:text="@string/btn_posting"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>