<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:scrollbarSize="8dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 뒤로 가기 -->
        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="#00FF0000"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="@string/back_button_description"/>
        <!-- 일일 퀘스트 -->
        <!-- 1,000보 걷기 -->

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:text="오늘의 임무"
            android:textAlignment="center"
            android:textColor="#45474B"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:text="수행 가능한 퀘스트를 볼 수 있습니다."
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/quest_image_description"
            app:srcCompat="@drawable/parchment128" />

        <!-- 메인 Lv 경험치바 -->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="내 레벨"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/level_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lv.0"
            android:textColor="#45474B"
            android:textSize="20sp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:background="#45474B" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress_bar_exp_text"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:foregroundGravity="center"
                android:indeterminateDrawable="@drawable/progress_bar_exp"
                android:max="1000"
                android:maxWidth="48dp"
                android:maxHeight="16dp"
                android:minWidth="48dp"
                android:minHeight="16dp"
                android:mirrorForRtl="true"
                android:progress="50"
                android:progressDrawable="@drawable/progress_bar_exp" />

            <!-- EXP text -->

            <TextView
                android:id="@+id/tv_exp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="100/1000" />

        </RelativeLayout>

        <!-- 1,000보 경험치 바 -->

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:background="#8BC34A"
            android:gravity="center"
            android:text="일일 임무"
            android:textColor="#45474B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[일일] 1,000보 걷기"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="1000"
            android:progressDrawable="@drawable/custom_progress_bar"
            tools:progress="500" />

        <!-- 버튼+텍스트 -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <!-- 이미지 버튼 -->
            <ImageButton
                android:id="@+id/imageButton2"
                style="@android:style/Widget.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FF0000"
                android:contentDescription="@string/quest_experience_button"
                android:padding="8dp"
                android:src="@drawable/money" />

            <!-- 경험치 텍스트뷰 -->
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageButton2"
                android:layout_marginStart="-69dp"
                android:layout_toEndOf="@id/imageButton2"
                android:text="exp100" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[일일] 3,000보 걷기"
            android:textSize="16sp" />

        <!-- 3,000보 경험치 바 -->
        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="3000"
            android:progressDrawable="@drawable/custom_progress_bar"
            tools:progress="1000" />

        <!-- 버튼+텍스트 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <!-- 이미지 버튼 -->
            <ImageButton
                android:id="@+id/imageButton3"
                style="@android:style/Widget.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FF0000"
                android:contentDescription="@string/quest_experience_button"
                android:padding="8dp"
                android:src="@drawable/money" />

            <!-- 경험치 텍스트뷰 -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageButton3"
                android:layout_marginStart="-68dp"
                android:layout_toEndOf="@id/imageButton3"
                android:text="exp300" />
        </RelativeLayout>

        <!-- 5,000보 걷기 -->
        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[일일] 5,000보 걷기"
            android:textSize="16sp" />

        <!-- 10,000보 경험치 바 -->
        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5000"
            android:progressDrawable="@drawable/custom_progress_bar"
            tools:progress="2500" />

        <!-- 버튼+텍스트 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <!-- 이미지 버튼 -->
            <ImageButton
                android:id="@+id/imageButton4"
                style="@android:style/Widget.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FF0000"
                android:contentDescription="@string/quest_experience_button"
                android:padding="8dp"
                android:src="@drawable/money" />

            <!-- 경험치 텍스트뷰 -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageButton4"
                android:layout_marginStart="-66dp"
                android:layout_toEndOf="@id/imageButton4"
                android:text="exp500" />
        </RelativeLayout>

        <!-- 10,000보 걷기 -->
        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[일일] 10,000보 걷기"
            android:textSize="16sp" />

        <!-- 10,000보 경험치 바 -->
        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10000"
            android:progressDrawable="@drawable/custom_progress_bar"
            tools:progress="2500" />

        <!-- 버튼+텍스트 -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <!-- 이미지 버튼 -->
            <ImageButton
                android:id="@+id/imageButton5"
                style="@android:style/Widget.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FF0000"
                android:contentDescription="@string/quest_experience_button"
                android:padding="8dp"
                android:src="@drawable/money" />

            <!-- 경험치 텍스트뷰 -->
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageButton5"
                android:layout_marginStart="-66dp"
                android:layout_toEndOf="@id/imageButton5"
                android:text="exp1000" />

        </RelativeLayout>

        <!-- 주간 퀘스트 -->
        <!-- 10,000보 걷기 -->
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:background="#8BC34A"
            android:gravity="center"
            android:text="주간 임무"
            android:textColor="#45474B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[주간] 10,000보 걷기"
            android:textSize="16sp" />

        <!-- 10,000보 경험치 바 -->

        <ProgressBar
            android:id="@+id/progressBar5"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10000"
            android:progressDrawable="@drawable/custom_progress_bar"
            tools:progress="7000" />

        <!-- 버튼+텍스트 -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <!-- 이미지 버튼 -->
            <ImageButton
                android:id="@+id/imageButton6"
                style="@android:style/Widget.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FF0000"
                android:contentDescription="@string/quest_experience_button"
                android:padding="8dp"
                android:src="@drawable/money" />

            <!-- 경험치 텍스트뷰 -->
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageButton6"
                android:layout_marginStart="-67dp"
                android:layout_toEndOf="@id/imageButton6"
                android:text="exp1000" />

        </RelativeLayout>

        <!-- 주간 퀘스트 -->
        <!-- 20,000보 걷기 -->
        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[주간] 20,000보 걷기"
            android:textSize="16sp" />

        <!-- 10,000보 경험치 바 -->

        <ProgressBar
            android:id="@+id/progressBar6"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20000"
            android:progressDrawable="@drawable/custom_progress_bar"
            tools:progress="17000" />

        <!-- 버튼+텍스트 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <!-- 이미지 버튼 -->
            <ImageButton
                android:id="@+id/imageButton8"
                style="@android:style/Widget.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FF0000"
                android:contentDescription="@string/quest_experience_button"
                android:padding="8dp"
                android:src="@drawable/money" />

            <!-- 경험치 텍스트뷰 -->
            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageButton8"
                android:layout_marginStart="-67dp"
                android:layout_toEndOf="@id/imageButton8"
                android:text="exp2000" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>

